@@ -338,6 +338,7 @@ void db_listgroup(server_cb_inf *, char *);
 void db_xover(server_cb_inf *, u_int32_t, u_int32_t);
 u_int32_t db_get_high_value(server_cb_inf *, char *);
 int db_chk_if_msgid_exists(server_cb_inf *, char *, char *);
+void db_check_newsgroup_posting_allowed(server_cb_inf *);
 void db_check_newsgroup_existence(server_cb_inf *);
 void db_check_user_existence(server_cb_inf *);
 void db_check_role_existence(server_cb_inf *);
@@ -378,6 +379,7 @@ void db_sqlite3_listgroup(server_cb_inf *, char *);
 void db_sqlite3_xover(server_cb_inf *, u_int32_t, u_int32_t);
 u_int32_t db_sqlite3_get_high_value(server_cb_inf *, char *);
 int db_sqlite3_chk_if_msgid_exists(server_cb_inf *, char *, char *);
+void db_sqlite3_chk_newsgroup_posting_allowed(server_cb_inf *);
 void db_sqlite3_chk_newsgroup_existence(server_cb_inf *); /* for POST AND for admin tool */
 void db_sqlite3_chk_user_existence(server_cb_inf *);
 void db_sqlite3_chk_role_existence(server_cb_inf *);
@@ -412,6 +414,7 @@ void db_mysql_close_connection(server_cb_inf *);
 void db_mysql_authinfo_check(server_cb_inf *);
 u_int32_t db_mysql_get_high_value(server_cb_inf *, char *);
 int db_mysql_chk_if_msgid_exists(server_cb_inf *, char *, char *);
+void db_mysql_chk_newsgroup_posting_allowed(server_cb_inf *);
 void db_mysql_chk_newsgroup_existence(server_cb_inf *);
 void db_mysql_create_newsgroup(server_cb_inf *, char *, char);
 void db_mysql_delete_newsgroup(server_cb_inf *, char *);
