@@ -3,10 +3,16 @@ WendzelNNTPd ChangeLog:
 ----------------- version 2.x ------------------
 
 2.1.x-current "t.b.d." : t.b.d.
+***TODO***:
+ - Check functioning of posting (not) allowed on both, sqlite3 and
+    MySQL databases!
+ADDED FEATURES:
+ - Finally, the "posting allowed" flag is considered in POST.
 MISC:
  - Updated SBo script to work with v. 2.1.3; fixed bug that made
    /usr/doc/wendzelnntpd-$ver/docs not accessible (+x permission
    was missing)
+ - Fixed some memory leaks.
 
 2.1.3-stable "Friedrichroda" : 17-Apr-2021:
 
